--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
 <div class="col-sm-4">
   <div class="card">
     <a href="#" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdIpNBFNiL6YRQOX4oj_7haiqWgo540gQW8nEIJgu9C7hWN9g/viewform?usp=sf_link/','_blank')">
+      <img class="card-img-top" src="part.png" alt="기업">
+    </a>
+    <div class="card-body">
+      <h5 class="card-title"></h5>
+      <h6 class="card-subtitle mb-2 text-muted"></h6>
+      <p class="card-text"></p>
+    </div>
+  </div>
+</div>
+<div class="col-sm-4">
+  <div class="card">
+    <a href="#" onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSdIpNBFNiL6YRQOX4oj_7haiqWgo540gQW8nEIJgu9C7hWN9g/viewform?usp=sf_link/','_blank')">
       <img class="card-img-top" src="001.png" alt="기업">
     </a>
     <div class="card-body">
